# UnBound

./: .gitignore  CMakeLists.txt  README.md  main.c  tsp_exact.c  tsp_exact.h
backend/: main.c  tsp_exact.c  tsp_exact.h
backend/api/: bridge_wrapper.py  main.py  main.spec  models.py
backend/core/: CMakeLists.txt  analytics.c  analytics.h  bridge.c  common.h  diagnostic.c  diagnostic.h  experiment.c  experiment.h  generator.c  generator.h  io_handler.c  io_handler.h  main.c  tsp_approx.c  tsp_approx.h  tsp_exact.c  tsp_exact.h  utils.c  utils.h
backend/engines/: CMakeLists.txt
backend/static/: index.html
backend/static/assets/: index-BjIeKWBo.css  index-Chlvr8IO.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: BenchmarkChart.jsx  ControlPanel.jsx  DiagnosticPanel.jsx  GraphCanvas.jsx  RangeExperiment.jsx  SolutionDisplay.jsx  Solver.jsx  SplashLoader.jsx
frontend/src/services/: api.js
frontend/src/views/: BatchView.jsx  LabView.jsx  SandboxView.jsx
